// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotPurchased does not render Bookmark when listType is not BookList 1`] = `
<div>
  <div
    class="float-right btn-group"
    role="group"
  >
    <button
      class="p-0 mr-3  btn btn-link"
      data-test-id="not-purchased-item-complete-id1"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <button
      class="p-0 mr-3 btn btn-link"
      data-test-id="not-purchased-item-edit-id1"
      type="button"
    >
      <i
        class="fa fa-edit fa-2x text-warning"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="not-purchased-item-delete-id1"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`NotPurchased renders Bookmark when listType is BookList 1`] = `
<div>
  <div
    class="float-right btn-group"
    role="group"
  >
    <button
      class="p-0 mr-3 btn btn-link"
      data-test-id="not-purchased-item-unread-id1"
      type="button"
    >
      <i
        class="fas fa-bookmark fa-2x text-info"
      />
    </button>
    <button
      class="p-0 mr-3  btn btn-link"
      data-test-id="not-purchased-item-complete-id1"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <button
      class="p-0 mr-3 btn btn-link"
      data-test-id="not-purchased-item-edit-id1"
      type="button"
    >
      <i
        class="fa fa-edit fa-2x text-warning"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="not-purchased-item-delete-id1"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;
